--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "types": "dts/index.d.ts",
   "dependencies": {
     "base64-stream": "^0.1.3",
-    "bluebird": "^2.9.25",
-    "bufferstream": "^0.6.2",
+    "bluebird": "2.11.0",
     "crypto": "0.0.3",
     "debug": "^2.2.0",
-    "formidable": "~1.0.15",
+    "@esvinson/formidable": "1.1.2",
     "node-expat": "^2.3.10",
     "request": "^2.55.0",
     "request-debug": "^0.2.0",
@@ -18,10 +17,10 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.4",
+    "@types/chai": "^4.2.12",
     "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.31",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "coffee-script": "^1.8.0",
     "mocha": "^3.5.3",
     "source-map-support": "^0.4.18",
